# testClangd

./: .clang-format  CMakeLists.txt  CMakePresets.json  main.cpp
.cache/clangd/index/: MulFile.cpp.61486DB43AB840B2.idx  MulFile.h.F8EBA11406785EDA.idx  TestClangFormat.cpp.AD154051EB156719.idx  TestClangFormat.h.A848327AA70FAE24.idx  main.cpp.5A6EEC21473DF482.idx
include/: MulFile.h  TestClangFormat.h
src/: MulFile.cpp  TestClangFormat.cpp
